--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -5,3 +5,8 @@ spring.datasource.generate-unique-name=false
 
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
+
+resource.path=/Users/yoon/IdeaProjects/SpringExample/files/
+upload.path=/img/**
+
+server.error.include-message=always
