--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,12 @@ dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
     annotationProcessor 'org.projectlombok:lombok'
 
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    runtimeOnly 'com.h2database:h2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
