--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.generate-unique-name=false
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
 
-resource.path=file:///Users/yoon/IdeaProjects/SpringExample/files/
+resource.path=/Users/yoon/IdeaProjects/SpringExample/files/
 upload.path=/img/**
+
+server.error.include-message=always
