Add page navigator.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.generate-unique-name=false
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
 
-resource.path=file:///Users/yoon/IdeaProjects/SpringExample/files/
+resource.path=file:///C:/Users/nyoon/IdeaProjects/SpringExample_board/files/
 upload.path=/img/**
