--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.servlet.multipart.maxRequestSize=10MB
 
 resource.path=file:///C:/Users/nyoon/IdeaProjects/SpringExample_board/files/
 upload.path=/img/**
+
+spring.profiles.include=oauth
