--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # directory for image upload
 files/
 
+## secrete access keys
+resources/application-oauth.properties
+resources/application-s3.properties
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
